1998-07-28  Andrew Veliath  <andrewtv@usa.net>

	* acinclude.m4 (revive): Create AC_CPP_ACCEPT_IDL and
	AC_CPP_PIPE_STDIN tests

	* configure.in: Add AC_CPP_ACCEPT_IDL and AC_CPP_PIPE_STDIN in
	configuration

	* util.h, parser.y, lexer.l: If HAVE_CPP_PIPE_STDIN is defined,
	then compile for piped CPP input, else use the more portable
	symlink method.  Also use getcwd instead of g_getcwd, since it has
	been commented out in glib.

1998-07-27  Andrew Veliath  <andrewtv@usa.net>

	* parser.y (IDL_parse_filename): g_getcwd returns a static buffer

1998-07-25  Neil Vachharajani  <nvachhar@pluto.njcc.com>

	* parser.y: Add one more byte for / in the allocation of linkto in 
	IDL_parse_filename
	
1998-07-20  Andrew Veliath  <andrewtv@usa.net>

	* Most of inhertance is done.  ChangeLog won't be updated much now
	  in preference to CVS logs.

1998-07-01  Andrew Veliath  <andrewtv@usa.net>

	* Fix spelling of "inheritance" :)
	
	* Add use long long type if __GNUC__ defined

	* Fix scoping rules (scope idents weren't being referenced
	  properly)

1998-06-29  Andrew Veliath  <andrewtv@usa.net>

	* Create skeleton texinfo file

	* configure.in improved
	
	* Wee, should now also work with standard lex with new renaming
	  rule
	
	* Now works with standard yacc, but flex will be a requirement

1998-06-24  Andrew Veliath  <andrewtv@usa.net>

	* Warn if identifier appears in different case
	
	* Most namespace collision detection added, except for inheritance

	* Use YYDEBUG
	
	* parser.y: Initial implementation of IDL_ns* stuff

1998-06-23  Andrew Veliath  <andrewtv@usa.net>

	* Implement constant evaluation

	* Almost all tree generation stuff added

	* Implement const_dcl and const_exp

	* Implement type_dcl, interface and module non-terminals
	
1998-06-22  Andrew Veliath  <andrewtv@usa.net>

	* Start implementing tree generation code

	* Add IDL_root_free, IDL_symtab_free

	* Modify IDL_parse_filename to include callbacks,
	  return a symbol table
